--- a/index.html
+++ b/index.html
@@ -6,3 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    
+    <body>
+    <form action="" method="GET">
+        <label>Vardas:</label>
+        <br>
+        <input type="text" name="firstName">
+        <br>
+        <label>Pavarde:</label>
+        <br>
+        <input type="text" name="lastName">
+        <br>
+        <label>Amzius:</label>
+        <br>
+        <input type="number" name="age">
+
+
+        <p>a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p>
+    </form>
+    </form>
+</body>
+
+</html>
