--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    
-    <body>
+<nav>
+    <ul>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/terms.html">Terms and conditions</a></li>
+
+    </ul>
+</nav>
+
+<body>
     <form action="" method="GET">
         <label>Vardas:</label>
         <br>
