--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <meta property="title" content="Pancakes"/>
+    <meta property="descriprion" content="About pancakes"/>
+    <link rel="canonical" href= "https://github.com/TheNumber42"/>
+    
+    <meta property="og:title" content="OG title" />
+    <meta property="og:description" content="This is a website" />
+    <meta property="og:image" content="https://images-gmi-pmc.edge-generalmills.com/df109202-f5dd-45a1-99b4-f10939afd509.jpg" />
+	
 </head>
 <nav>
     <ul>
