--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
         <p>a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p>
     </form>
     </form>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QXCSXXWK43"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QXCSXXWK43');
+</script>
 </body>
 
 </html>
