--- a/index.html
+++ b/index.html
@@ -3,54 +3,52 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
-    <meta property="title" content="Pancakes"/>
-    <meta property="descriprion" content="About pancakes"/>
-    <link rel="canonical" href= "https://github.com/TheNumber42"/>
-    
-    <meta property="og:title" content="OG title" />
-    <meta property="og:description" content="This is a website" />
-    <meta property="og:image" content="https://images-gmi-pmc.edge-generalmills.com/df109202-f5dd-45a1-99b4-f10939afd509.jpg" />
-	
+    <link rel="stylesheet" href="/style.css">
 </head>
-<nav>
-    <ul>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/terms.html">Terms and conditions</a></li>
-
-    </ul>
-</nav>
 
 <body>
-    <form action="" method="GET">
-        <label>Vardas:</label>
-        <br>
-        <input type="text" name="firstName">
-        <br>
-        <label>Pavarde:</label>
-        <br>
-        <input type="text" name="lastName">
-        <br>
-        <label>Amzius:</label>
-        <br>
-        <input type="number" name="age">
+
+    <div class="container">
+        <h1 id="header">Vincent Van Gogh</h1>
+
+        <img class="center" id="header-img"
+            src="https://i.etsystatic.com/12258042/r/il/43fe5e/1961276446/il_570xN.1961276446_by7i.jpg" alt="">
 
 
-        <p>a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p>
-    </form>
-    </form>
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QXCSXXWK43"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-QXCSXXWK43');
-</script>
+        <p style='font-size:25px; margin-left: 20px;'>Here's a time line of Vincent van Gogh's Life:</p>
+        <div class="dates">
+            <ul>
+                <li><b>1853</b> - Vincent Willem van Gogh was born on 30 March 1853 in Groot-Zundert, in the
+                    predominantly
+                    Catholic province of North Brabant in the southern Netherlands.</li>
+                <li><b>1881</b> - Van Gogh's parents moved to the Etten countryside in April 1881</li>
+                <li><b>1883</b>- Still life paintings by Vincent van Gogh (Netherlands)</li>
+                <li><b>1883</b> - Van Gogh relocated to Paris in March 1886, beginning a series of moves that the art
+                    historian Melissa McQuillan believes also reflects later changes "in style, his reorientation of his
+                    enterprise [which] might be linked".</li>
+                <li><b>1886</b> - Ill from drink and suffering from smoker's cough, Van Gogh sought refuge in Arles.
+                </li>
+                <li><b>1888</b> - When Gauguin agreed to visit Arles, Van Gogh hoped for friendship, and the realisation
+                    of
+                    his utopian idea of an artists' collective.</li>
+                <li><b>1890</b> - Van Gogh entered the hospital at Saint Paul-de-Mausole on 8 May 1889 accompanied by
+                    his
+                    carer, Frédéric Salles, a Protestant clergyman.</li>
+                <li><b>1890</b> - On 27 July 1890, aged 37, Van Gogh shot himself in the chest with a revolver (the gun
+                    was
+                    never found).</li>
+            </ul>
+        </div>
+        <p style='font-size:20px '>" His posthumous reputation grew steadily during the 20th century; today he is
+            remembered and revered as an important but tragic painter."</p>
+        <p><em>--- From Wikipedia, the free encyclopedia.</em></p>
+        <p style='font-size:20px'>If you have time, you should read more about this incredible human being on his <a
+                href='https://en.wikipedia.org/wiki/Vincent_van_Gogh#Influence'>Wikipedia entry</a></p>
+    </div>
 </body>
 
 </html>
